src/grammer/grammer.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

'use strict'

function peg$subclass(child, parent) {
  function ctor() {
    this.constructor = child
  }
  ctor.prototype = parent.prototype
  child.prototype = new ctor()
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message
  this.expected = expected
  this.found = found
  this.location = location
  this.name = 'SyntaxError'

  if (typeof Error.captureStackTrace === 'function') {
    Error.captureStackTrace(this, peg$SyntaxError)
  }
}

peg$subclass(peg$SyntaxError, Error)

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return '"' + literalEscape(expectation.text) + '"'
    },

    class: function(expectation) {
      var escapedParts = '',
        i

      for (i = 0; i < expectation.parts.length; i++) {
        escapedParts +=
          expectation.parts[i] instanceof Array
            ? classEscape(expectation.parts[i][0]) +
              '-' +
              classEscape(expectation.parts[i][1])
            : classEscape(expectation.parts[i])
      }

      return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']'
    },

    any: function(expectation) {
      return 'any character'
    },

    end: function(expectation) {
      return 'end of input'
    },

    other: function(expectation) {
      return expectation.description
    },
  }

  function hex(ch) {
    return ch
      .charCodeAt(0)
      .toString(16)
      .toUpperCase()
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g, '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function(ch) {
        return '\\x0' + hex(ch)
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
        return '\\x' + hex(ch)
      })
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g, '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function(ch) {
        return '\\x0' + hex(ch)
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
        return '\\x' + hex(ch)
      })
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
      i,
      j

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i])
    }

    descriptions.sort()

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i]
          j++
        }
      }
      descriptions.length = j
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0]

      case 2:
        return descriptions[0] + ' or ' + descriptions[1]

      default:
        return (
          descriptions.slice(0, -1).join(', ') +
          ', or ' +
          descriptions[descriptions.length - 1]
        )
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : 'end of input'
  }

  return (
    'Expected ' +
    describeExpected(expected) +
    ' but ' +
    describeFound(found) +
    ' found.'
  )
}

function peg$parse(input, options) {
  options = options !== void 0 ? options : {}

  var peg$FAILED = {},
    peg$startRuleFunctions = { command: peg$parsecommand },
    peg$startRuleFunction = peg$parsecommand,
    peg$c0 = peg$otherExpectation('command'),
    peg$c1 = function(command) {
      return command
        .filter(x => x !== null)
        .reduce((acc, item) => ({ ...acc, ...item }), {})
    },
    peg$c2 = peg$otherExpectation('operator'),
    peg$c3 = /^[e]/,
    peg$c4 = peg$classExpectation(['e'], false, false),
    peg$c5 = function(operator) {
      return {
        operator: operators[operator],
      }
    },
    peg$c6 = /^[.]/,
    peg$c7 = peg$classExpectation(['.'], false, false),
    peg$c8 = function(value) {
      const [bar, beat, sixteenth] = value.filter(x => x !== '.')
      const defaultValue = {
        type: 'number',
        value: 0,
      }

      return {
        bar,
        beat: beat || defaultValue,
        sixteenth: sixteenth || defaultValue,
      }
    },
    peg$c9 = /^[,]/,
    peg$c10 = peg$classExpectation([','], false, false),
    peg$c11 = function(wrapped) {
      const [value] = wrapped

      return {
        type: 'list',
        value: value.filter(x => x !== ',' && x !== null),
      }
    },
    peg$c12 = function(value) {
      return value
    },
    peg$c13 = '*',
    peg$c14 = peg$literalExpectation('*', false),
    peg$c15 = function() {
      return {
        type: 'wildcard',
      }
    },
    peg$c16 = /^[%]/,
    peg$c17 = peg$classExpectation(['%'], false, false),
    peg$c18 = /^[0-9]/,
    peg$c19 = peg$classExpectation([['0', '9']], false, false),
    peg$c20 = function(value) {
      return {
        type: 'modulus',
        value: Number(value.slice(1)),
      }
    },
    peg$c21 = function(value) {
      return {
        type: 'number',
        value: Number(value.join('')),
      }
    },
    peg$c22 = peg$otherExpectation('scaleLookup'),
    peg$c23 = 's',
    peg$c24 = peg$literalExpectation('s', false),
    peg$c25 = /^[1-9]/,
    peg$c26 = peg$classExpectation([['1', '9']], false, false),
    peg$c27 = function(scale) {
      const [, scaleNumber = [], , scaleDegree] = scale

      return {
        scaleNumber: Number(scaleNumber[0]) - 1 || 0,
        scaleDegree: Number(scaleDegree[0]) - 1,
      }
    },
    peg$c28 = ' ',
    peg$c29 = peg$literalExpectation(' ', false),
    peg$c30 = function() {
      return null
    },
    peg$currPos = 0,
    peg$savedPos = 0,
    peg$posDetailsCache = [{ line: 1, column: 1 }],
    peg$maxFailPos = 0,
    peg$maxFailExpected = [],
    peg$silentFails = 0,
    peg$result

  if ('startRule' in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        'Can\'t start parsing from rule "' + options.startRule + '".',
      )
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos)
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos)
  }

  function expected(description, location) {
    location =
      location !== void 0
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    )
  }

  function error(message, location) {
    location =
      location !== void 0
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location)
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text: text, ignoreCase: ignoreCase }
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return {
      type: 'class',
      parts: parts,
      inverted: inverted,
      ignoreCase: ignoreCase,
    }
  }

  function peg$anyExpectation() {
    return { type: 'any' }
  }

  function peg$endExpectation() {
    return { type: 'end' }
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description: description }
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos],
      p

    if (details) {
      return details
    } else {
      p = pos - 1
      while (!peg$posDetailsCache[p]) {
        p--
      }

      details = peg$posDetailsCache[p]
      details = {
        line: details.line,
        column: details.column,
      }

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++
          details.column = 1
        } else {
          details.column++
        }

        p++
      }

      peg$posDetailsCache[pos] = details
      return details
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
      endPosDetails = peg$computePosDetails(endPos)

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    }
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos
      peg$maxFailExpected = []
    }

    peg$maxFailExpected.push(expected)
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location)
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location,
    )
  }

  function peg$parsecommand() {
    var s0, s1, s2, s3, s4, s5, s6

    peg$silentFails++
    s0 = peg$currPos
    s1 = peg$currPos
    s2 = peg$parseoperator()
    if (s2 !== peg$FAILED) {
      s3 = peg$parsespace()
      if (s3 !== peg$FAILED) {
        s4 = peg$parsemeter()
        if (s4 !== peg$FAILED) {
          s5 = peg$parsespace()
          if (s5 !== peg$FAILED) {
            s6 = peg$parsescaleLookup()
            if (s6 !== peg$FAILED) {
              s2 = [s2, s3, s4, s5, s6]
              s1 = s2
            } else {
              peg$currPos = s1
              s1 = peg$FAILED
            }
          } else {
            peg$currPos = s1
            s1 = peg$FAILED
          }
        } else {
          peg$currPos = s1
          s1 = peg$FAILED
        }
      } else {
        peg$currPos = s1
        s1 = peg$FAILED
      }
    } else {
      peg$currPos = s1
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c1(s1)
    }
    s0 = s1
    peg$silentFails--
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c0)
      }
    }

    return s0
  }

  function peg$parseoperator() {
    var s0, s1

    peg$silentFails++
    s0 = peg$currPos
    if (peg$c3.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos)
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c4)
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c5(s1)
    }
    s0 = s1
    peg$silentFails--
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c2)
      }
    }

    return s0
  }

  function peg$parsemeter() {
    var s0, s1, s2, s3, s4, s5, s6, s7

    s0 = peg$currPos
    s1 = []
    s2 = peg$currPos
    s3 = peg$parsem()
    if (s3 !== peg$FAILED) {
      if (peg$c6.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s4 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c7)
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parsem()
        if (s5 !== peg$FAILED) {
          if (peg$c6.test(input.charAt(peg$currPos))) {
            s6 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s6 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c7)
            }
          }
          if (s6 !== peg$FAILED) {
            s7 = peg$parsem()
            if (s7 !== peg$FAILED) {
              s3 = [s3, s4, s5, s6, s7]
              s2 = s3
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
      } else {
        peg$currPos = s2
        s2 = peg$FAILED
      }
    } else {
      peg$currPos = s2
      s2 = peg$FAILED
    }
    if (s2 === peg$FAILED) {
      s2 = peg$currPos
      s3 = peg$parsem()
      if (s3 !== peg$FAILED) {
        if (peg$c6.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s4 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c7)
          }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parsem()
          if (s5 !== peg$FAILED) {
            s3 = [s3, s4, s5]
            s2 = s3
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
      } else {
        peg$currPos = s2
        s2 = peg$FAILED
      }
      if (s2 === peg$FAILED) {
        s2 = peg$parsem()
      }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        s2 = peg$currPos
        s3 = peg$parsem()
        if (s3 !== peg$FAILED) {
          if (peg$c6.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c7)
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsem()
            if (s5 !== peg$FAILED) {
              if (peg$c6.test(input.charAt(peg$currPos))) {
                s6 = input.charAt(peg$currPos)
                peg$currPos++
              } else {
                s6 = peg$FAILED
                if (peg$silentFails === 0) {
                  peg$fail(peg$c7)
                }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsem()
                if (s7 !== peg$FAILED) {
                  s3 = [s3, s4, s5, s6, s7]
                  s2 = s3
                } else {
                  peg$currPos = s2
                  s2 = peg$FAILED
                }
              } else {
                peg$currPos = s2
                s2 = peg$FAILED
              }
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
        if (s2 === peg$FAILED) {
          s2 = peg$currPos
          s3 = peg$parsem()
          if (s3 !== peg$FAILED) {
            if (peg$c6.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos)
              peg$currPos++
            } else {
              s4 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$c7)
              }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsem()
              if (s5 !== peg$FAILED) {
                s3 = [s3, s4, s5]
                s2 = s3
              } else {
                peg$currPos = s2
                s2 = peg$FAILED
              }
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
          if (s2 === peg$FAILED) {
            s2 = peg$parsem()
          }
        }
      }
    } else {
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c8(s1)
    }
    s0 = s1

    return s0
  }

  function peg$parsem() {
    var s0

    s0 = peg$parsemetricList()
    if (s0 === peg$FAILED) {
      s0 = peg$parsemetric()
    }

    return s0
  }

  function peg$parsemetricList() {
    var s0, s1, s2, s3, s4, s5, s6

    s0 = peg$currPos
    s1 = []
    s2 = peg$currPos
    s3 = peg$parsemetric()
    if (s3 !== peg$FAILED) {
      if (peg$c9.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s4 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c10)
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parsemetric()
        if (s5 !== peg$FAILED) {
          if (peg$c9.test(input.charAt(peg$currPos))) {
            s6 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s6 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c10)
            }
          }
          if (s6 === peg$FAILED) {
            s6 = null
          }
          if (s6 !== peg$FAILED) {
            s3 = [s3, s4, s5, s6]
            s2 = s3
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
      } else {
        peg$currPos = s2
        s2 = peg$FAILED
      }
    } else {
      peg$currPos = s2
      s2 = peg$FAILED
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        s2 = peg$currPos
        s3 = peg$parsemetric()
        if (s3 !== peg$FAILED) {
          if (peg$c9.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c10)
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsemetric()
            if (s5 !== peg$FAILED) {
              if (peg$c9.test(input.charAt(peg$currPos))) {
                s6 = input.charAt(peg$currPos)
                peg$currPos++
              } else {
                s6 = peg$FAILED
                if (peg$silentFails === 0) {
                  peg$fail(peg$c10)
                }
              }
              if (s6 === peg$FAILED) {
                s6 = null
              }
              if (s6 !== peg$FAILED) {
                s3 = [s3, s4, s5, s6]
                s2 = s3
              } else {
                peg$currPos = s2
                s2 = peg$FAILED
              }
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
      }
    } else {
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c11(s1)
    }
    s0 = s1

    return s0
  }

  function peg$parsemetric() {
    var s0, s1

    s0 = peg$currPos
    s1 = peg$parsedigit()
    if (s1 === peg$FAILED) {
      s1 = peg$parsewildcard()
      if (s1 === peg$FAILED) {
        s1 = peg$parsemodulus()
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c12(s1)
    }
    s0 = s1

    return s0
  }

  function peg$parsewildcard() {
    var s0, s1

    s0 = peg$currPos
    if (input.charCodeAt(peg$currPos) === 42) {
      s1 = peg$c13
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c14)
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c15()
    }
    s0 = s1

    return s0
  }

  function peg$parsemodulus() {
    var s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$currPos
    s2 = []
    s3 = peg$currPos
    if (peg$c16.test(input.charAt(peg$currPos))) {
      s4 = input.charAt(peg$currPos)
      peg$currPos++
    } else {
      s4 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c17)
      }
    }
    if (s4 !== peg$FAILED) {
      if (peg$c18.test(input.charAt(peg$currPos))) {
        s5 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s5 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c19)
        }
      }
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5]
        s3 = s4
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
    } else {
      peg$currPos = s3
      s3 = peg$FAILED
    }
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$currPos
        if (peg$c16.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s4 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c17)
          }
        }
        if (s4 !== peg$FAILED) {
          if (peg$c18.test(input.charAt(peg$currPos))) {
            s5 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s5 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c19)
            }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5]
            s3 = s4
          } else {
            peg$currPos = s3
            s3 = peg$FAILED
          }
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      }
    } else {
      s2 = peg$FAILED
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos)
    } else {
      s1 = s2
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c20(s1)
    }
    s0 = s1

    return s0
  }

  function peg$parsedigit() {
    var s0, s1, s2

    s0 = peg$currPos
    s1 = []
    if (peg$c18.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos)
      peg$currPos++
    } else {
      s2 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c19)
      }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        if (peg$c18.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c19)
          }
        }
      }
    } else {
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c21(s1)
    }
    s0 = s1

    return s0
  }

  function peg$parsescaleLookup() {
    var s0, s1, s2, s3, s4, s5, s6

    peg$silentFails++
    s0 = peg$currPos
    s1 = peg$currPos
    if (input.charCodeAt(peg$currPos) === 115) {
      s2 = peg$c23
      peg$currPos++
    } else {
      s2 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c24)
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = []
      if (peg$c25.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s4 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c26)
        }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4)
        if (peg$c25.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s4 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c26)
          }
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parsespace()
        if (s4 !== peg$FAILED) {
          s5 = []
          if (peg$c25.test(input.charAt(peg$currPos))) {
            s6 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s6 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c26)
            }
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6)
            if (peg$c25.test(input.charAt(peg$currPos))) {
              s6 = input.charAt(peg$currPos)
              peg$currPos++
            } else {
              s6 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$c26)
              }
            }
          }
          if (s5 !== peg$FAILED) {
            s2 = [s2, s3, s4, s5]
            s1 = s2
          } else {
            peg$currPos = s1
            s1 = peg$FAILED
          }
        } else {
          peg$currPos = s1
          s1 = peg$FAILED
        }
      } else {
        peg$currPos = s1
        s1 = peg$FAILED
      }
    } else {
      peg$currPos = s1
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c27(s1)
    }
    s0 = s1
    peg$silentFails--
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c22)
      }
    }

    return s0
  }

  function peg$parsespace() {
    var s0, s1, s2

    s0 = peg$currPos
    s1 = []
    if (input.charCodeAt(peg$currPos) === 32) {
      s2 = peg$c28
      peg$currPos++
    } else {
      s2 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c29)
      }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        if (input.charCodeAt(peg$currPos) === 32) {
          s2 = peg$c28
          peg$currPos++
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c29)
          }
        }
      }
    } else {
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c30()
    }
    s0 = s1

    return s0
  }

  const operators = {
    e: 'every',
  }

  peg$result = peg$startRuleFunction()

  if (peg$result !== peg$FAILED && peg$currPos === input.length) {
    return peg$result
  } else {
    if (peg$result !== peg$FAILED && peg$currPos < input.length) {
      peg$fail(peg$endExpectation())
    }

    throw peg$buildStructuredError(
      peg$maxFailExpected,
      peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
      peg$maxFailPos < input.length
        ? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
        : peg$computeLocation(peg$maxFailPos, peg$maxFailPos),
    )
  }
}

module.exports = {
  SyntaxError: peg$SyntaxError,
  parse: peg$parse,
}
